fix rtl punctuation

--- a/stories/ar/0002_انظر-إلى-الحيونات_slides.html
+++ b/stories/ar/0002_انظر-إلى-الحيونات_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="انظر-إلى-الحيونات" class="slide level1">
-<h1>انظر إلى الحيونات</h1>
+<h1 dir="rtl">انظر إلى الحيونات</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
-<p>انظر إلى الحيونات</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
+<p dir="rtl">انظر إلى الحيونات</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>البقرة تخور</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
+<p dir="rtl">البقرة تخور</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>الجدي يقول بـ مييه ميه</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
+<p dir="rtl">الجدي يقول بـ مييه ميه</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
-<p>الحصان يصهل</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
+<p dir="rtl">الحصان يصهل</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>الخنزيرينخر</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
+<p dir="rtl">الخنزيرينخر</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
-<p>الدجاجة تقرقر</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
+<p dir="rtl">الدجاجة تقرقر</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>الكلب ينبح</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
+<p dir="rtl">الكلب ينبح</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
-<p>المزارع يقول شششش!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
+<p dir="rtl">المزارع يقول شششش!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,17 +170,17 @@
 
 <h2 id="انظر-إلى-الحيونات-1">انظر إلى الحيونات</h2>
 <strong>Text:</strong> Jenny Katz<br> <strong>Illustrations:</strong> Sandy Campbell<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/look-animals'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
