--- a/stories/ar/0089_خلاي-تتحدث-إلى-النباتات_slides.html
+++ b/stories/ar/0089_خلاي-تتحدث-إلى-النباتات_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="خلاي-تتحدث-إلى-النباتات" class="slide level1">
-<h1>خلاي تتحدث إلى النباتات</h1>
+<h1 dir="rtl">خلاي تتحدث إلى النباتات</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>هذه خلاي عمرها سبع سنين معنى اسمها الشخص الجيد يدعا في لغتها لوبوكوزو</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p dir="rtl">هذه خلاي عمرها سبع سنين معنى اسمها الشخص الجيد يدعا في لغتها لوبوكوزو</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>تستيقظ خلاي كل صباح و تقول لشجرة البرتقال: أرجوك يا شجرة البرتقال اكبري وأعطينا الكثير من البرتقال الطازج</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p dir="rtl">تستيقظ خلاي كل صباح و تقول لشجرة البرتقال: أرجوك يا شجرة البرتقال اكبري وأعطينا الكثير من البرتقال الطازج</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>تمشي خلاي إلى المدرسة ،وفي طريقها تتحدث مع الأعشاب أرجوك أيتها الأعشاب اكبري وابقي خضراء ولاتجف.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p dir="rtl">تمشي خلاي إلى المدرسة ،وفي طريقها تتحدث مع الأعشاب أرجوك أيتها الأعشاب اكبري وابقي خضراء ولاتجف.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>تمر خلاي أمام الأزهار البرية أرجوك أيتها الأزهار ابقي مزهرة لأستطيع أن أضعك فوق شعري</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p dir="rtl">تمر خلاي أمام الأزهار البرية أرجوك أيتها الأزهار ابقي مزهرة لأستطيع أن أضعك فوق شعري</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>في المدرسة تتحدث مع الشجرة التي في منتصف المبنى أرجوكي أيتها الشجرة مدي أغصانك الكبيرة لنستطيع القراءة تحت ظلك.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p dir="rtl">في المدرسة تتحدث مع الشجرة التي في منتصف المبنى أرجوكي أيتها الشجرة مدي أغصانك الكبيرة لنستطيع القراءة تحت ظلك.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>تتحدث خلاي مع الشجيرات الصغيرة أرجوك اكبري وكوني قوية لتمنعي الأشخاص السيئين من الدخول.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p dir="rtl">تتحدث خلاي مع الشجيرات الصغيرة أرجوك اكبري وكوني قوية لتمنعي الأشخاص السيئين من الدخول.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>عندما تعود خلاي إلى البيت ،تزور شجرة البرتقال ، وتسألها ألم يصبح برتقالك طازجا بعد؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p dir="rtl">عندما تعود خلاي إلى البيت ،تزور شجرة البرتقال ، وتسألها ألم يصبح برتقالك طازجا بعد؟</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>تتنهد خلاي :البرتقال بقي أخضرا ثم تقول: سوف أراك يا شجرة البرتقال غدا بعدها ربما سيكون لديك برتقالا طازجا لي</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p dir="rtl">تتنهد خلاي :البرتقال بقي أخضرا ثم تقول: سوف أراك يا شجرة البرتقال غدا بعدها ربما سيكون لديك برتقالا طازجا لي</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,17 +170,17 @@
 
 <h2 id="خلاي-تتحدث-إلى-النباتات-1">خلاي تتحدث إلى النباتات</h2>
 <strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
