--- a/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا_slides.html
+++ b/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="لماذا-لاتملك-أفراس-النهرشعرا" class="slide level1">
-<h1>لماذا لاتملك أفراس النهرشعرا</h1>
+<h1 dir="rtl">لماذا لاتملك أفراس النهرشعرا</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>في أحد الأيام كان أرنب يمشي بالقرب من حافة النهر</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
+<p dir="rtl">في أحد الأيام كان أرنب يمشي بالقرب من حافة النهر</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>كان هناك أيضا فرس نهرجاءت في نزهة، وكانت تأكل بعض العشب الأخضراللذيذ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
+<p dir="rtl">كان هناك أيضا فرس نهرجاءت في نزهة، وكانت تأكل بعض العشب الأخضراللذيذ</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>لم تكن الفرس تعرف بوجود الأرنب فداست بطريق الخطأ على قدمه صرخ الأرنب بوجه فرس النهر،أنت يا فراس النهر! ألاترين أنك دست على قدمي ؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
+<p dir="rtl">لم تكن الفرس تعرف بوجود الأرنب فداست بطريق الخطأ على قدمه صرخ الأرنب بوجه فرس النهر،أنت يا فراس النهر! ألاترين أنك دست على قدمي ؟</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>اعتذرت فرس النهر، و قالت أنا آسفة ياصديقي ،فأنا لم أرك أرجوك سامحني لكن الأرنب لم يسمع كلامها و صرخ بها أنت قصدت هذا وستدفعين الثمن!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
+<p dir="rtl">اعتذرت فرس النهر، و قالت أنا آسفة ياصديقي ،فأنا لم أرك أرجوك سامحني لكن الأرنب لم يسمع كلامها و صرخ بها أنت قصدت هذا وستدفعين الثمن!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>ذهب الأرنب ليبحث عن الناروقال اذهبي واحرقي فرس النهر عندما تأتي إلى الماء لتأكل العشب لأنها داست علي ،أجابتها النارسأفعل ماطلبت مني يا صديقي</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
+<p dir="rtl">ذهب الأرنب ليبحث عن الناروقال اذهبي واحرقي فرس النهر عندما تأتي إلى الماء لتأكل العشب لأنها داست علي ،أجابتها النارسأفعل ماطلبت مني يا صديقي</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>وبعد ذلك بينما كانت فرس النهر تأكل العشب اندلعت النيران و بداتء بحرق شعر فرس النهر</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
+<p dir="rtl">وبعد ذلك بينما كانت فرس النهر تأكل العشب اندلعت النيران و بداتء بحرق شعر فرس النهر</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>بدأت فرس النهر بالبكاء ثم ركضت إلى الماء لقد حرقت النار كل شعرها ظلت فرس النهر تبكي لقد احترق كل شعري بالنار، لقد أحرقت كل شعري! ذهب كل شعري ! شعري الجميل ، شعري الجميل!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
+<p dir="rtl">بدأت فرس النهر بالبكاء ثم ركضت إلى الماء لقد حرقت النار كل شعرها ظلت فرس النهر تبكي لقد احترق كل شعري بالنار، لقد أحرقت كل شعري! ذهب كل شعري ! شعري الجميل ، شعري الجميل!</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>لهذ السبب لا تخرج فرس النهرمن الماء أبدا فهي تخاف من الاحتراق بالنار أما الأرنب كان سعيدا جدا عندما احترقت فرس النهر فقال أخيرا تخلصت منها!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
+<p dir="rtl">لهذ السبب لا تخرج فرس النهرمن الماء أبدا فهي تخاف من الاحتراق بالنار أما الأرنب كان سعيدا جدا عندما احترقت فرس النهر فقال أخيرا تخلصت منها!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,17 +170,17 @@
 
 <h2 id="لماذا-لاتملك-أفراس-النهرشعرا-1">لماذا لاتملك أفراس النهرشعرا</h2>
 <strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
