--- a/stories/ar/0141_-الدجاجة-والدودة-_slides.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="الدجاجة-والدودة" class="slide level1">
-<h1>الدجاجة والدودة</h1>
+<h1 dir="rtl">الدجاجة والدودة</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p>كانت الدجاجة والدودة أصدقاء، لكنهم كانوا يتنافسون دائما مع بعضها البعض. في يوم من الأيام، قرروا لعب كرة القدم لمعرفة من هو أفضل لاعب.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p dir="rtl">كانت الدجاجة والدودة أصدقاء، لكنهم كانوا يتنافسون دائما مع بعضها البعض. في يوم من الأيام، قرروا لعب كرة القدم لمعرفة من هو أفضل لاعب.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيداً، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p dir="rtl">ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيداً، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p>بعد ذلك قرروا لعب ركلات الترجيح. في المرة الأولى كانت الدودة هي حارس المرمى. فسجلت الدجاجة هدف واحد فقط. ثم جاء دور الدجاجة لتكون هي حارس المرمى.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p dir="rtl">بعد ذلك قرروا لعب ركلات الترجيح. في المرة الأولى كانت الدودة هي حارس المرمى. فسجلت الدجاجة هدف واحد فقط. ثم جاء دور الدجاجة لتكون هي حارس المرمى.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>ركلت الدودة الكرة فسجلت هدف. ناورت الدودة بالكرة و سجلت هدف. سددت الدودة الكرة برأسها في المرمى و سجلت هدف. سجلت الدودة خمسة أهداف.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p dir="rtl">ركلت الدودة الكرة فسجلت هدف. ناورت الدودة بالكرة و سجلت هدف. سددت الدودة الكرة برأسها في المرمى و سجلت هدف. سجلت الدودة خمسة أهداف.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p>كانت الدجاجة غاضبة لأنها خسرت، حيث أنها لم تكن تتمتع بالروح الرياضية. ضحكت الدودة لأن صديقتها الدجاجة أثارت ضجة لخسارتها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p dir="rtl">كانت الدجاجة غاضبة لأنها خسرت، حيث أنها لم تكن تتمتع بالروح الرياضية. ضحكت الدودة لأن صديقتها الدجاجة أثارت ضجة لخسارتها.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعاً وابتلعت الدودة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p dir="rtl">كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعاً وابتلعت الدودة.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>بينما كانت الدجاجة تمشي في طريقها إلى المنزل، التقت بوالدة الدودة. سألت والدة الدودة الدجاجة: &quot;هل رأيت إبنتي؟&quot; لكن الدجاجة لم تقل أي شيء. كانت والدة الدودة قلقة .</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p dir="rtl">بينما كانت الدجاجة تمشي في طريقها إلى المنزل، التقت بوالدة الدودة. سألت والدة الدودة الدجاجة: &quot;هل رأيت إبنتي؟&quot; لكن الدجاجة لم تقل أي شيء. كانت والدة الدودة قلقة .</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>ثم سمعت والدة الدودة صوتا صغيرا يبكي: &quot;ساعديني يا أمي!&quot;. نظرت والدة الدودة في جميع الأنحاء واستمعت بعناية، فوجدت الصوت يأتي من داخل الدجاجة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p dir="rtl">ثم سمعت والدة الدودة صوتا صغيرا يبكي: &quot;ساعديني يا أمي!&quot;. نظرت والدة الدودة في جميع الأنحاء واستمعت بعناية، فوجدت الصوت يأتي من داخل الدجاجة.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p>صاحت والدة الدودة &quot;استخدمي القوة الخاصة بك يا ابنتي!&quot;. حيث يستطيع الديدان إخراج رائحة كريهة وطعم سيئ. بدأت الدجاجة تشعر بالمرض.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p dir="rtl">صاحت والدة الدودة &quot;استخدمي القوة الخاصة بك يا ابنتي!&quot;. حيث يستطيع الديدان إخراج رائحة كريهة وطعم سيئ. بدأت الدجاجة تشعر بالمرض.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيراً للاشمئزاز!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p dir="rtl">تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيراً للاشمئزاز!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجاً من بطنها. زحفت الدودة و والدتها سريعا فوق شجرة للاختفاء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p dir="rtl">استمرت الدجاجة تسعل حتى سعلت الدودة خارجاً من بطنها. زحفت الدودة و والدتها سريعا فوق شجرة للاختفاء.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p>ومنذ ذلك الوقت، أصبح الدجاج والديدان الأعداء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p dir="rtl">ومنذ ذلك الوقت، أصبح الدجاج والديدان الأعداء.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -206,17 +206,17 @@
 
 <h2 id="الدجاجة-والدودة-1">الدجاجة والدودة</h2>
 <strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
