--- a/stories/ar/0158_الدجاجة-والنسر_slides.html
+++ b/stories/ar/0158_الدجاجة-والنسر_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="الدجاجة-والنسر" class="slide level1">
-<h1>الدجاجة والنسر</h1>
+<h1 dir="rtl">الدجاجة والنسر</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
+<p dir="rtl">في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيداً جداً للعثور على طعام. و كان يعود متعباً جداً. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
+<p dir="rtl">في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيداً جداً للعثور على طعام. و كان يعود متعباً جداً. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
+<p dir="rtl">بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولاً. و صنع لنفسه زوجاً جميلاً من الأجنحة وطار عالياً فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
+<p dir="rtl">كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولاً. و صنع لنفسه زوجاً جميلاً من الأجنحة وطار عالياً فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>عندما رأت الطيور الأخرى النسر يطير بعيداً. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضاً. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
+<p dir="rtl">عندما رأت الطيور الأخرى النسر يطير بعيداً. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضاً. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
+<p dir="rtl">عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
+<p dir="rtl">في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
+<p dir="rtl">&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعاً و أختطف أحد أطفال الدجاجة وحمله بعيداً. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
+<p dir="rtl">عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعاً و أختطف أحد أطفال الدجاجة وحمله بعيداً. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
+<p dir="rtl">كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -188,17 +188,17 @@
 
 <h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
 <strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
