--- a/stories/ar/0296_tom-the-banana-seller.html
+++ b/stories/ar/0296_tom-the-banana-seller.html
@@ -43,97 +43,97 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 
-<h1 id="section">توم، بائع الموز</h1>
+<h1 dir="rtl" id="section">توم، بائع الموز</h1>
 
 Humphreys Odunga<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
 
-<p>يحمل توم طبق الموز الناضج.</p>
+<p dir="rtl">يحمل توم طبق الموز الناضج.</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
 
-<p>يتجه توم إلى السوق لبيع الموز.</p>
+<p dir="rtl">يتجه توم إلى السوق لبيع الموز.</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
 
-<p>الناس في السوق يشترون الفاكهة.</p>
+<p dir="rtl">الناس في السوق يشترون الفاكهة.</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
 
-<p>لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
+<p dir="rtl">لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>يقول الناس “في مجتمعنا لا يبيع الفاكهة إلا النساء” ويتساءلون “ما نوع هذا الرجل؟”</p>
+<p dir="rtl">يقول الناس “في مجتمعنا لا يبيع الفاكهة إلا النساء” ويتساءلون “ما نوع هذا الرجل؟”</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
 
-<p>لكن توم لا يستسلم. ها هو ينادي “اشتروا موزي … اشتروا موزي الناضج اللذيذ.”</p>
+<p dir="rtl">لكن توم لا يستسلم. ها هو ينادي “اشتروا موزي … اشتروا موزي الناضج اللذيذ.”</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
 
-<p>أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
+<p dir="rtl">أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
 
-<p>اشترت المرأة الموز.</p>
+<p dir="rtl">اشترت المرأة الموز.</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
 
-<p>توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
+<p dir="rtl">توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
 
 <div class="pagenum">9</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
 
-<p>أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
+<p dir="rtl">أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
 
 <div class="pagenum">10</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
 
-<p>ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
+<p dir="rtl">ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
 
 <div class="pagenum">11</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
 
-<p>وضع توم الطبق على رأسه ورجع إلى منزله.</p>
+<p dir="rtl">وضع توم الطبق على رأسه ورجع إلى منزله.</p>
 
 <div class="pagenum">12</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Humphreys Odunga<br /><strong>Illustrations:</strong> Zablon Alex Nguku<br /><strong>Translation:</strong> Maaouia Haj Mabrouk<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/tom-banana-seller">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Humphreys Odunga<br /><strong>Illustrations:</strong> Zablon Alex Nguku<br /><strong>Translation:</strong> Maaouia Haj Mabrouk<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/tom-banana-seller">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
