--- a/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا.html
+++ b/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا.html
@@ -43,78 +43,78 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 
-<h1 id="section">لماذا لاتملك أفراس النهرشعرا</h1>
+<h1 dir="rtl" id="section">لماذا لاتملك أفراس النهرشعرا</h1>
 
 Basilio Gimo, David Ker<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
-<p>في أحد الأيام كان أرنب يمشي بالقرب من حافة النهر</p>
+<p dir="rtl">في أحد الأيام كان أرنب يمشي بالقرب من حافة النهر</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
 
-<p>كان هناك أيضا فرس نهرجاءت في نزهة، وكانت تأكل بعض العشب الأخضراللذيذ</p>
+<p dir="rtl">كان هناك أيضا فرس نهرجاءت في نزهة، وكانت تأكل بعض العشب الأخضراللذيذ</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>لم تكن الفرس تعرف بوجود الأرنب فداست بطريق الخطأ على قدمه
+<p dir="rtl">لم تكن الفرس تعرف بوجود الأرنب فداست بطريق الخطأ على قدمه
 صرخ الأرنب بوجه فرس النهر،أنت يا فراس النهر!
 ألاترين أنك دست على قدمي ؟</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>اعتذرت فرس النهر، و قالت أنا آسفة ياصديقي ،فأنا لم أرك أرجوك سامحني
+<p dir="rtl">اعتذرت فرس النهر، و قالت أنا آسفة ياصديقي ،فأنا لم أرك أرجوك سامحني
 لكن الأرنب لم يسمع كلامها و صرخ بها أنت قصدت هذا وستدفعين الثمن!</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>ذهب الأرنب ليبحث عن الناروقال اذهبي واحرقي فرس النهر عندما تأتي إلى الماء لتأكل العشب
+<p dir="rtl">ذهب الأرنب ليبحث عن الناروقال اذهبي واحرقي فرس النهر عندما تأتي إلى الماء لتأكل العشب
 لأنها داست علي ،أجابتها النارسأفعل ماطلبت مني يا صديقي</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>وبعد ذلك بينما كانت فرس النهر تأكل العشب
+<p dir="rtl">وبعد ذلك بينما كانت فرس النهر تأكل العشب
 اندلعت النيران و بداتء بحرق شعر فرس النهر</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
 
-<p>بدأت فرس النهر بالبكاء ثم ركضت إلى الماء لقد حرقت النار كل شعرها
+<p dir="rtl">بدأت فرس النهر بالبكاء ثم ركضت إلى الماء لقد حرقت النار كل شعرها
 ظلت فرس النهر تبكي لقد احترق كل شعري بالنار، لقد أحرقت كل شعري!
 ذهب كل شعري ! شعري الجميل ، شعري الجميل!</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>لهذ السبب لا تخرج فرس النهرمن الماء أبدا
+<p dir="rtl">لهذ السبب لا تخرج فرس النهرمن الماء أبدا
 فهي تخاف من الاحتراق بالنار أما الأرنب كان سعيدا جدا عندما احترقت فرس النهر
 فقال أخيرا تخلصت منها!</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
