--- a/stories/ar/0129_الأخ-الصغير-الكسول.html
+++ b/stories/ar/0129_الأخ-الصغير-الكسول.html
@@ -43,63 +43,63 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/01.jpg" />
 
-<h1 id="section">الأخ الصغير الكسول</h1>
+<h1 dir="rtl" id="section">الأخ الصغير الكسول</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
 
-<p>أنا استيقظ و أشعل النار</p>
+<p dir="rtl">أنا استيقظ و أشعل النار</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
 
-<p>أنا أغلي القليل من الماء</p>
+<p dir="rtl">أنا أغلي القليل من الماء</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
 
-<p>أنا أقطع حطب الأشجار</p>
+<p dir="rtl">أنا أقطع حطب الأشجار</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
 
-<p>أنا أحرك الوعاء</p>
+<p dir="rtl">أنا أحرك الوعاء</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
 
-<p>أنا أنظف الأرض</p>
+<p dir="rtl">أنا أنظف الأرض</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
 
-<p>أنا أغسل الصحون</p>
+<p dir="rtl">أنا أغسل الصحون</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>لماذا أنا أعمل بجد…
+<p dir="rtl">لماذا أنا أعمل بجد…
 بينما أخي مشغول باللعب</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/lazy-little-brother">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/lazy-little-brother">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
