--- a/stories/ar/0231_كتاب-الطقس.html
+++ b/stories/ar/0231_كتاب-الطقس.html
@@ -43,69 +43,69 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
 
-<h1 id="section">كتاب الطقس</h1>
+<h1 dir="rtl" id="section">كتاب الطقس</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
 
-<p>إنه جاف</p>
+<p dir="rtl">إنه جاف</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
 
-<p>الشمس حارة</p>
+<p dir="rtl">الشمس حارة</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
 
-<p>الرياح قوية</p>
+<p dir="rtl">الرياح قوية</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
 
-<p>إنه غائم</p>
+<p dir="rtl">إنه غائم</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
 
-<p>إنه بارد</p>
+<p dir="rtl">إنه بارد</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
 
-<p>إنه ماطر</p>
+<p dir="rtl">إنه ماطر</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
 
-<p>هناك رعد</p>
+<p dir="rtl">هناك رعد</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
 
-<p>أنا أرى قوس المطر</p>
+<p dir="rtl">أنا أرى قوس المطر</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Sandra McDougall<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/weather-book">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Sandra McDougall<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/weather-book">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
