--- a/stories/ar/0296_tom-the-banana-seller_slides.html
+++ b/stories/ar/0296_tom-the-banana-seller_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="توم-بائع-الموز" class="slide level1">
-<h1>توم، بائع الموز</h1>
+<h1 dir="rtl">توم، بائع الموز</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
-<p>يحمل توم طبق الموز الناضج.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p dir="rtl">يحمل توم طبق الموز الناضج.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
-<p>يتجه توم إلى السوق لبيع الموز.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p dir="rtl">يتجه توم إلى السوق لبيع الموز.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
-<p>الناس في السوق يشترون الفاكهة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p dir="rtl">الناس في السوق يشترون الفاكهة.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
-<p>لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p dir="rtl">لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>يقول الناس &quot;في مجتمعنا لا يبيع الفاكهة إلا النساء&quot; ويتساءلون &quot;ما نوع هذا الرجل؟&quot;</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p dir="rtl">يقول الناس &quot;في مجتمعنا لا يبيع الفاكهة إلا النساء&quot; ويتساءلون &quot;ما نوع هذا الرجل؟&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>لكن توم لا يستسلم. ها هو ينادي &quot;اشتروا موزي ... اشتروا موزي الناضج اللذيذ.&quot;</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p dir="rtl">لكن توم لا يستسلم. ها هو ينادي &quot;اشتروا موزي ... اشتروا موزي الناضج اللذيذ.&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p dir="rtl">أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
-<p>اشترت المرأة الموز.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p dir="rtl">اشترت المرأة الموز.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
-<p>توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p dir="rtl">توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p dir="rtl">أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
-<p>ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p dir="rtl">ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
-<p>وضع توم الطبق على رأسه ورجع إلى منزله.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p dir="rtl">وضع توم الطبق على رأسه ورجع إلى منزله.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -206,17 +206,17 @@
 
 <h2 id="توم-بائع-الموز-1">توم، بائع الموز</h2>
 <strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/tom-banana-seller'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
-</div></center>
+<p dir="rtl"><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+.</div></center>
 
 
 </section>
